<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ch.bedag.dap.hellodata</groupId>
        <artifactId>hello-data</artifactId>
        <version>HELLODATA-2183-Keycloak-Login-Problems-SNAPSHOT</version>
    </parent>

    <artifactId>hello-data-commons</artifactId>
    <version>HELLODATA-2183-Keycloak-Login-Problems-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>hello-data-commons</name>

    <modules>
        <module>hello-data-spring-boot-starter-parent</module>
        <module>hello-data-common</module>
        <module>hello-data-base-model</module>
        <module>hello-data-sidecar-common</module>
        <module>hello-data-metainfo-model</module>
        <module>hello-data-nats-spring</module>
        <module>hello-data-portal-common</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub kanton-bern Maven Packages</name>
            <url>https://maven.pkg.github.com/kanton-bern/hellodata-be</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven-deploy-plugin.version}</version>
                <configuration>
                    <deployAtEnd>false</deployAtEnd>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
